--- a/.github/workflows/tvm-grpc-release.yaml
+++ b/.github/workflows/tvm-grpc-release.yaml
@@ -24,7 +24,7 @@ jobs:
           targets: x86_64-unknown-linux-gnu
       - name: Install LLVM and Clang
         run: |
-          wget https://apt.llvm.org/llvm.sh -O /tmp/llvm.sh && chmod +x /tmp/llvm.sh && /tmp/llvm.sh 16 all
+          wget https://apt.llvm.org/llvm.sh -O /tmp/llvm.sh && chmod +x /tmp/llvm.sh && sudo /tmp/llvm.sh 16 all
           sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-16 101
           sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-16 101
 
