--- a/.github/workflows/tvm-grpc-release.yaml
+++ b/.github/workflows/tvm-grpc-release.yaml
@@ -28,5 +28,13 @@ jobs:
           sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-16 101
           sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-16 101
 
-      - run: cargo build -v --bin tvm-grpc --target x86_64-unknown-linux-gnu
+      - name: Run sccache-cache
+        uses: mozilla-actions/sccache-action@v0.0.3
+
       - run: cargo build -v --bin tvm-grpc --target x86_64-unknown-linux-gnu --release
+        env:
+          SCCACHE_GHA_ENABLED: "true"
+          RUSTC_WRAPPER: "sccache"
+          CMAKE_C_COMPILER_LAUNCHER: "sccache"
+          CMAKE_CXX_COMPILER_LAUNCHER: "sccache"
+      - run: ${SCCACHE_PATH} --show-stats
